[package]
name = "tondi-script-stack"
description = "Tondi script stack tracking tool and deubgger"
version = "0.17.0"
edition = "2021"

[dependencies]
tondi-script = { path = "../tondi-script" }
tondi-consensus-core = { path = "../Tondi/consensus/core" }
tondi-scriptexec = { path = "../tondi-scriptexec" }
tondi-opcode-utils = { path = "../tondi-opcode-utils" }

crossterm = { version = "0.27.0", optional = true}
hex = "0.4.3"

[features]
interactive = ["crossterm"]
